# OS_Lab_4

./: CMakeLists.txt  README.md  dynamic.cpp  static.cpp
include/: realize.hpp
src/: realize1.cpp  realize2.cpp
